# houseprice

./: CMakeLists.txt  README.md  ann_models.h  houseprice.csv  houseprice.txt  housepricetest.csv  kaggle_demo.cpp  main.cpp
application/: house_price_service.h
domain/: house.hpp  house_factory.h  house_repository.h  house_service.h
test/: README.md  main.cpp
